fix bug on iphones

--- a/tamagochicat/css/header.pcss
+++ b/tamagochicat/css/header.pcss
@@ -22,7 +22,8 @@
 }
 
 :root {
-    background-color: #828C9F;
+    //background-color: #828C9F;
+    background-color: #383357;
     overflow: hidden;
     height: 100%;
     --green: #3CBC58;
