--- a/tamagochicat/css/main.pcss
+++ b/tamagochicat/css/main.pcss
@@ -150,9 +150,10 @@ body {
         position: absolute;
         top: 0;
         left: 0;
-        min-width: 100vw;
+        min-width: 120vw;
         height: 100vh;
         z-index: -50;
+        background-color: #828C9F;
         background-image: url("../materials/wallpaper.svg");
         background-repeat: space;
         background-size: contain;
